--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,6 +29,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Explorando a runner
+        run: lsb_release -a
+
       - name: Setup Pages
         uses: actions/configure-pages@v4
 
